include $(top_srcdir)/Makefile.am.common
# Ping pong stuff
include pingPong/Makefile.am.stub
# Unit test stuff
include warped/Makefile.am.stub
# Adaptive test stuff
include adaptTest/Makefile.am.stub
# PHOLD stuff
include phold/Makefile.am.stub
# Raid stuff
include raid/Makefile.am.stub
# Random stuff
include rnd/Makefile.am.stub
# SMMP stuff
include smmp/Makefile.am.stub
# Epidemic stuff
include epidemic/Makefile.am.stub
# iscas85 stuff
# include circuitsimulationmodels/iscas85/Makefile.am.stub
# DFF stuff
# include circuitsimulationmodels/iscas89/Makefile.am.DFF
# iscas89 stuff
include circuitsimulationmodels/iscas89/Makefile.am.stub
# fulladder stuff
# include circuitsimulationmodels/fulladder/Makefile.am.stub

noinst_PROGRAMS = $(PING_PONG_PROGRAM) $(UNIT_TEST_PROGRAM) $(ADAPT_TEST_PROGRAM) $(PHOLD_PROGRAM) $(RAID_PROGRAM) $(SMMP_PROGRAM) $(ISCAS89_PROGRAM) $(EPIDEMIC_PROGRAM) #$(FULLADDER_PROGRAM)
